@@ -1,3 +1,6 @@
+- Marked cutting sometimes leaves a newline in the file unintelligently,
+  such as when all of a line is selected but the mark doesn't proceed to
+  the new line. (8) [FIXED/IRRELEVANT]
 - Certains are not lined up properly when there are tabs in them at 
   certain col values. (9) [FIXED]
 - edit_refresh() and update_line() do not handle selecting text when the
@@ -49,6 +52,7 @@
  [FIXED]
 - Using nano -t, user can not exit until a filename is given via ^O. (30)
  [FIXED]
+- totsize problems still abound in do_justify (33) [FIXED]
 - Using -k cut text is not pasted properly. (34) [FIXED].
 - Using -k pasted text is not updated properly if it goes beyond editbot. (35)
  [FIXED]
@@ -85,17 +89,12 @@
   current line to the top of the screen, which it shouldn't do.  (50) 
   [FIXED]
 - with PDCURSES, running meta-X turns off the keypad.  (51) [FIXED]
-- Alt speller argument (-s, --speller) does not take a string argument of
-  more than one word. (53) [FIXED].
-- totsize problems still abound in do_justify (33) [FIXED]
-- Marked cutting sometimes leaves a newline in the file unintelligently,
-  such as when all of a line is selected but the mark doesn't proceed to
-  the new line. (8) [FIXED/IRRELEVANT]
-
-** Open BUGS **
-
 - Resizing the window completely screws up the display if in any other
   mode than normal editing (help screen, search and replace, file
-  browser..) (52)
+  browser..) (52) [FIXED]
+- Alt speller argument (-s, --speller) does not take a string argument of
+  more than one word. (53) [FIXED].
+
+** Open BUGS **
 
 $Id$
